--- a/FE/home-page.html
+++ b/FE/home-page.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <script src="avatar-manager.js"></script>
 </head>
 
 <body>
@@ -41,7 +40,7 @@
                         <span class="badge">1</span>
                     </div>
                     <div class="profile">
-                        <div class="avatar" onclick="window.location.href='profile.html'">G</div>
+                        <div class="avatar" onclick="window.location.href='profile.html'">P</div>
                     </div>
                 </div>
             </div>
@@ -156,9 +155,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="api-client.js"></script>
-    <script src="custom-dropdown.js"></script>
-    <script src="script.js"></script>
 </body>
 
 </html>
