--- a/FE/profile.html
+++ b/FE/profile.html
@@ -7,7 +7,6 @@
     <title>Thông tin cá nhân - IOT Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <script src="avatar-manager.js"></script>
 </head>
 
 <body>
@@ -48,7 +47,7 @@
                         <span class="badge">1</span>
                     </div>
                     <div class="profile">
-                        <div class="avatar">G</div>
+                        <div class="avatar">P</div>
                     </div>
                 </div>
             </div>
@@ -63,7 +62,7 @@
                     <div class="profile-card">
                         <div class="profile-avatar-section">
                             <div class="profile-avatar-large">
-                                <div class="avatar-image" id="profileAvatar">G</div>
+                                <div class="avatar-image" id="profileAvatar">P</div>
                                 <div class="avatar-status"></div>
                             </div>
                             <button class="change-avatar-btn" onclick="openAvatarModal()">
