--- a/FE/home-page.html
+++ b/FE/home-page.html
@@ -154,8 +154,11 @@
         </div>
     </div>
 
+    <script type="module" src="sensor-card.js"></script>
+    <script type="module" src="chart-display.js"></script>
+    <script type="module" src="update-data.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
 </body>
 
-<script src="sensor-card.js"></script>
 </html>
