--- a/FE/sensor-data.html
+++ b/FE/sensor-data.html
@@ -279,6 +279,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="module" src="sensor-card.js"></script>
+    <script type="module" src="chart-display.js"></script>
+    <script type="module" src="update-data.js"></script>
 </body>
 
 </html>
