--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -150,10 +150,8 @@
         </div>
     </div>
 
-    <script type="module" src="../src/components/sensor-card.js"></script>
-    <script type="module" src="../src/components/chart-display.js"></script>
-    <script type="module" src="../update-data.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../update-data-standalone.js"></script>
 
 </body>
 
