--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -23,7 +23,7 @@
                     <i class="fas fa-chart-line"></i>
                     <span>Dữ liệu cảm biến</span>
                 </a>
-                <a href="action-history.html" class="nav-item">
+                <a href="#" class="nav-item">
                     <i class="fas fa-history"></i>
                     <span>Lịch sử hoạt động</span>
                 </a>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="header-right">
                     <div class="profile">
-                        <div class="avatar" onclick="window.location.href='profile.html'">P</div>
+                        <div class="avatar" onclick="window.location.href='#'">P</div>
                     </div>
                 </div>
             </div>
