--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -25,7 +25,7 @@
                     <i class="fas fa-chart-line"></i>
                     <span>Dữ liệu cảm biến</span>
                 </a>
-                <a href="action-history.html" class="nav-item">
+                <a href="#" class="nav-item">
                     <i class="fas fa-history"></i>
                     <span>Lịch sử hoạt động</span>
                 </a>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="header-right">
                     <div class="profile">
-                        <div class="avatar" onclick="window.location.href='profile.html'">G</div>
+                        <div class="avatar" onclick="window.location.href='#'">G</div>
                     </div>
                 </div>
             </div>
