--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -151,7 +151,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../update-data-standalone.js"></script>
+    <script type="module" src="../src/pages/home-page-loader.js"></script>
 
 </body>
 
