--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -239,6 +239,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="module" src="../src/pages/sensor-data-loader.js"></script>
 </body>
 
 </html>
