feat: Enhance sensor data chart functionality with date selection and timezone handling

--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -60,11 +60,7 @@
                                     <option value="humidity">Độ ẩm</option>
                                     <option value="all">Tất cả cảm biến</option>
                                 </select>
-                                <select id="timePeriod">
-                                    <option value="today" selected>Hôm nay</option>
-                                    <option value="1day">1 Ngày trước</option>
-                                    <option value="2days">2 Ngày trước</option>
-                                </select>
+                                <input type="date" id="datePicker" class="date-picker">
                             </div>
                         </div>
                         <div class="chart-area">
