Refactor chart classes and implement LED control service
- Refactored HomePageChart and SensorDataChart classes for improved readability and consistency in code style.
- Updated chart configurations, colors, and labels for better visual representation.
- Added a new LEDControlService class to manage LED commands via MQTT, including connection handling and command publishing.
- Implemented singleton pattern for LEDControlService to ensure a single instance is used throughout the application.
- Enhanced error handling and logging for MQTT operations in LEDControlService.

--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -143,7 +143,7 @@
                                     <div class="range-filters">
                                         <div class="range-filter">
                                             <div class="range-label">
-                                                <i class="fas fa-thermometer-half" style="color: #ff6b35;"></i>
+                                                <i class="fas fa-thermometer-half" style="color: #FF383C;"></i>
                                                 <span>Nhiệt độ (°C):</span>
                                             </div>
                                             <div class="range-inputs">
@@ -154,7 +154,7 @@
                                         </div>
                                         <div class="range-filter">
                                             <div class="range-label">
-                                                <i class="fas fa-sun" style="color: #ffb300;"></i>
+                                                <i class="fas fa-sun" style="color: #FEBC2F;"></i>
                                                 <span>Ánh sáng (%):</span>
                                             </div>
                                             <div class="range-inputs">
