feat: Add manual refresh button and auto-refresh functionality for sensor data; implement update indicator for data refresh notifications

--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -88,6 +88,10 @@
                                     <option value="50">50 dòng</option>
                                     <option value="100">100 dòng</option>
                                 </select>
+                                <button id="manualRefresh" class="refresh-btn">
+                                    <i class="fas fa-sync-alt"></i>
+                                    Làm mới
+                                </button>
                                 <button id="exportCSV" class="export-btn">
                                     <i class="fas fa-download"></i>
                                     Xuất CSV
