feat: Add action history functionality and update MQTT integration

--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -25,7 +25,7 @@
                     <i class="fas fa-chart-line"></i>
                     <span>Dữ liệu cảm biến</span>
                 </a>
-                <a href="#" class="nav-item">
+                <a href="action-history.html" class="nav-item">
                     <i class="fas fa-history"></i>
                     <span>Lịch sử hoạt động</span>
                 </a>
