feat: Implement action history feature with API integration and UI components

--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -80,7 +80,7 @@
                 <div class="data-table-section">
                     <div class="table-card">
                         <div class="table-header">
-                            <h3>Toàn bộ dữ liệu cảm biến</h3>
+                            <h3>Bảng dữ liệu cảm biến</h3>
                             <div class="table-controls">
                                 <select id="tablePageSize">
                                     <option value="10">10 dòng</option>
