--- a/frontend/public/action-history.html
+++ b/frontend/public/action-history.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="vi">
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lịch sử hành động</title>
     <link rel="stylesheet" href="../src/styles/main.css">
     <link rel="stylesheet" href="../src/styles/pages.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <div class="sidebar">
@@ -60,4 +62,5 @@
         loader.load(100);
     </script>
 </body>
+
 </html>
