Add profile page and avatar update functionality
- Created a new profile.html page with user information and avatar management.
- Implemented avatar update functionality in profile-control.js, allowing users to change their profile picture.
- Updated sensor-data.html to link to the new profile page.
- Added styles for the profile page in profile.css, enhancing the visual presentation of user information and avatar section.
- Removed unnecessary comments and cleaned up styles in pages.css.

--- a/frontend/public/action-history.html
+++ b/frontend/public/action-history.html
@@ -38,7 +38,7 @@
                 <div class="header-center"></div>
                 <div class="header-right">
                     <div class="profile">
-                        <div class="avatar" onclick="window.location.href='#'">P</div>
+                        <div class="avatar" onclick="window.location.href='profile.html'">P</div>
                     </div>
                 </div>
             </div>
