--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="header-right">
                     <div class="profile">
-                        <div class="avatar" onclick="window.location.href='#'">P</div>
+                        <div class="avatar" onclick="window.location.href='profile.html'">P</div>
                     </div>
                 </div>
             </div>
