feat: Integrate profile control script into action history, home, and sensor data pages

--- a/frontend/public/action-history.html
+++ b/frontend/public/action-history.html
@@ -62,6 +62,7 @@
         const loader = new ActionHistoryLoader('action-history-container');
         loader.load(100);
     </script>
+    <script src="../src/control/profile-control.js"></script>
 </body>
 
 </html>
