--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -35,8 +35,7 @@
 
         <div class="main-content">
             <div class="header">
-                <div class="header-center">
-                </div>
+                <div class="header-center"></div>
                 <div class="header-right">
                     <div class="profile">
                         <div class="avatar" onclick="window.location.href='profile.html'">P</div>
@@ -54,7 +53,7 @@
                     <div class="profile-card">
                         <div class="profile-avatar-section">
                             <div class="profile-avatar-large">
-                                <div class="avatar-image" id="profileAvatar">G</div>
+                                <div class="avatar-image" id="profileAvatar">P</div>
                                 <div class="avatar-status"></div>
                             </div>
                             <button class="change-avatar-btn" onclick="openAvatarModal()">
