--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -154,6 +154,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="../src/pages/home-page-loader.js"></script>
+    <script src="../src/control/profile-control.js"></script>
 
 </body>
 
