--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -160,6 +160,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="../src/pages/sensor-data-loader.js"></script>
+    <script src="../src/control/profile-control.js"></script>
 </body>
 
 </html>
