feat: Add page titles to action history, home, profile, and sensor data pages for improved navigation

--- a/frontend/public/action-history.html
+++ b/frontend/public/action-history.html
@@ -35,7 +35,11 @@
 
         <div class="main-content">
             <div class="header">
-                <div class="header-center"></div>
+                <div class="header-center">
+                    <div class="page-title">
+                        <h1>Lịch sử hoạt động</h1>
+                    </div>
+                </div>
                 <div class="header-right">
                     <div class="profile">
                         <div class="avatar" onclick="window.location.href='profile.html'">P</div>
@@ -44,10 +48,6 @@
             </div>
 
             <div class="content action-history-page">
-                <div class="page-title">
-                    <h1>Lịch sử hoạt động</h1>
-                </div>
-
                 <div id="action-history-container">
                     Loading...
                 </div>
