--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -35,7 +35,11 @@
 
         <div class="main-content">
             <div class="header">
-                <div class="header-center"></div>
+                <div class="header-center">
+                    <div class="page-title">
+                        <h1>Thông tin cá nhân</h1>
+                    </div>
+                </div>
                 <div class="header-right">
                     <div class="profile">
                         <div class="avatar" onclick="window.location.href='profile.html'">P</div>
@@ -44,10 +48,6 @@
             </div>
 
             <div class="content">
-                <div class="page-title">
-                    <h1>Thông tin cá nhân</h1>
-                </div>
-
                 <div class="profile-container">
                     <div class="profile-card">
                         <div class="profile-avatar-section">
