feat: Update profile page title and improve action history filtering with device and state options

--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dữ liệu cảm biến</title>
+    <title>Thông tin cá nhân</title>
     <link rel="stylesheet" href="../src/styles/main.css">
     <link rel="stylesheet" href="../src/styles/profile.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -101,8 +101,8 @@
                                     GitHub
                                 </label>
                                 <div class="info-value link-value">
-                                    <a href="https://github.com/PhucHuwu" target="_blank" rel="noopener noreferrer">
-                                        github.com/PhucHuwu
+                                    <a href="https://github.com/PhucHuwu/IoT_Project" target="_blank" rel="noopener noreferrer">
+                                        github.com/PhucHuwu/IoT_Project
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                 </div>
