feat: Implement RESTful API for IoT Monitoring System with sensor data management and LED control
- Added Flask-RESTX for API development.
- Created endpoints for managing sensor data, including adding, retrieving, and listing sensor data.
- Implemented LED control endpoints for turning LEDs on/off and checking their status.
- Introduced health check and system info endpoints for monitoring system status.
- Enhanced sorting functionality for sensor data based on timestamp with improved error handling.
- Updated requirements.txt to include Flask-RESTX.

--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -134,6 +134,19 @@
                                     </a>
                                 </div>
                             </div>
+
+                            <div class="info-group">
+                                <label class="info-label">
+                                    <i class="fas fa-file-pdf"></i>
+                                    API Document
+                                </label>
+                                <div class="info-value link-value">
+                                    <a href="http://localhost:5000/docs/" target="_blank" rel="noopener noreferrer">
+                                        http://localhost:5000/docs/
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
