fix: Format GitHub link in profile.html for better readability

--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -101,7 +101,8 @@
                                     GitHub
                                 </label>
                                 <div class="info-value link-value">
-                                    <a href="https://github.com/PhucHuwu/IoT_Project" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://github.com/PhucHuwu/IoT_Project" target="_blank"
+                                        rel="noopener noreferrer">
                                         github.com/PhucHuwu/IoT_Project
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
