feat: Enhance sensor data handling and UI improvements
- Added search and sorting functionality for sensor data retrieval in the backend.
- Updated frontend to support dynamic pagination and improved loading indicators.
- Refactored LED control logic to prevent multiple simultaneous actions.
- Enhanced user experience with updated profile links and improved table controls.
- Introduced automatic detection of time and numeric formats in search inputs.

--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -125,12 +125,12 @@
 
                             <div class="info-group">
                                 <label class="info-label">
-                                    <i class="fas fa-briefcase"></i>
-                                    Portfolio
+                                    <i class="fas fa-file-pdf"></i>
+                                    Docs
                                 </label>
                                 <div class="info-value link-value">
-                                    <a href="https://phuchuwu.vercel.app/" target="_blank" rel="noopener noreferrer">
-                                        phuchuwu.vercel.app
+                                    <a href="file:///D:/Project/Git/IoT_Project/docs.pdf" target="_blank" rel="noopener noreferrer">
+                                        Docs PDF
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                 </div>
