fix: Update documentation link in profile.html for accessibility
- Changed the link to the project documentation from a local file path to a Google Drive URL, ensuring users can access the document online.

--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -129,7 +129,7 @@
                                     Docs
                                 </label>
                                 <div class="info-value link-value">
-                                    <a href="file:///D:/Project/Git/IoT_Project/docs.pdf" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://drive.google.com/file/d/17nzse2O0pj2cMIqYOOnC4AvaWQ5jF1CD/view?usp=drive_link" target="_blank" rel="noopener noreferrer">
                                         Docs PDF
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
