feat: Update link behavior in profile.html for improved user experience
- Changed link target attributes from "_blank" to "_new" for external links in profile.html.
- Implemented a function in profile-control.js to open links in a new window, enhancing navigation and usability.

--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -101,7 +101,7 @@
                                     GitHub
                                 </label>
                                 <div class="info-value link-value">
-                                    <a href="https://github.com/PhucHuwu/IoT_Project" target="_blank"
+                                    <a href="https://github.com/PhucHuwu/IoT_Project" target="_new"
                                         rel="noopener noreferrer">
                                         github.com/PhucHuwu/IoT_Project
                                         <i class="fas fa-external-link-alt"></i>
@@ -116,7 +116,7 @@
                                 </label>
                                 <div class="info-value link-value">
                                     <a href="https://www.figma.com/community/file/1553247723226281473/iot-phuc"
-                                        target="_blank" rel="noopener noreferrer">
+                                        target="_new" rel="noopener noreferrer">
                                         figma.com/iot-figma
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
@@ -129,7 +129,8 @@
                                     Docs
                                 </label>
                                 <div class="info-value link-value">
-                                    <a href="https://drive.google.com/file/d/17nzse2O0pj2cMIqYOOnC4AvaWQ5jF1CD/view?usp=drive_link" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://drive.google.com/file/d/17nzse2O0pj2cMIqYOOnC4AvaWQ5jF1CD/view?usp=drive_link"
+                                        target="_new" rel="noopener noreferrer">
                                         Docs PDF
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
@@ -142,7 +143,7 @@
                                     API Document
                                 </label>
                                 <div class="info-value link-value">
-                                    <a href="http://localhost:5000/docs/" target="_blank" rel="noopener noreferrer">
+                                    <a href="http://localhost:5000/docs/" target="_new" rel="noopener noreferrer">
                                         http://localhost:5000/docs/
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
