feat: Add available dates endpoint and enhance data sampling in sensor data retrieval
- Introduced a new API endpoint to retrieve available dates for sensor data, improving data accessibility.
- Implemented data sampling functionality in both backend and frontend to allow users to specify the number of data points returned.
- Enhanced date picker integration in the frontend for better user experience when selecting dates.
- Updated CSS styles for the date picker to improve visual appeal and usability.

--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -7,6 +7,7 @@
     <title>Trang chủ</title>
     <link rel="stylesheet" href="../src/styles/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 
 <body>
@@ -136,6 +137,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script type="module" src="../src/pages/home-page-loader.js"></script>
     <script src="../src/control/profile-control.js"></script>
 
