feat: Enhance LED control and status retrieval functionality
- Updated LEDControlService to manage LED states and pending commands more effectively.
- Improved LED status retrieval in the backend to include pending command information.
- Refactored frontend LED control to support periodic status checks and better user feedback during command processing.
- Enhanced sensor data tables to include additional columns for improved data representation.

--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -92,10 +92,11 @@
                             <table id="sensorDataTable" class="sensor-data-table">
                                 <thead>
                                     <tr>
-                                        <th>Thời gian</th>
+                                        <th>STT</th>
                                         <th>Cảm biến nhiệt độ (°C)</th>
                                         <th>Cảm biến ánh sáng (%)</th>
                                         <th>Cảm biến độ ẩm (%)</th>
+                                        <th>Thời gian</th>
                                     </tr>
                                 </thead>
                                 <tbody id="sensorTableBody">
