feat: Add support for LED4 in API models, database, and frontend components

--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -69,7 +69,9 @@
                         </div>
                         <div class="sensor-value">--%</div>
                     </div>
+                </div>
 
+                <div class="led-control-grid">
                     <div class="sensor-card led1">
                         <div class="card-header">
                             <span class="sensor-name">LED 1</span>
@@ -93,6 +95,16 @@
                     <div class="sensor-card led3">
                         <div class="card-header">
                             <span class="sensor-name">LED 3</span>
+                            <div class="toggle-switch">
+                                <div class="toggle-slider"></div>
+                            </div>
+                        </div>
+                        <div class="led-status">TẮT</div>
+                    </div>
+
+                    <div class="sensor-card led4">
+                        <div class="card-header">
+                            <span class="sensor-name">LED 4</span>
                             <div class="toggle-switch">
                                 <div class="toggle-slider"></div>
                             </div>
